--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-marked": "~1.0.1",
     "js-yaml": "~3.5.3",
     "github-api": "~0.11.2",
-    "github-js": "githubjs#~0.1.3"
+    "github-js": "githubjs#~0.1.3",
+    "angular-cache": "~4.5.0"
   }
 }
