--- a/bower.json
+++ b/bower.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "angular": "~1.5.0",
     "angular-route": "~1.5.0",
-    "angular-base64": "~2.0.5",
+    "angular-sanitize": "~1.5.0",
     "angular-utf8-base64": "~0.0.5",
     "angular-marked": "~1.0.1",
+    "angular-cache": "~4.5.0",
     "js-yaml": "~3.5.3",
     "github-api": "~0.11.2",
     "github-js": "githubjs#~0.1.3",
-    "angular-cache": "~4.5.0"
+    "highlight": "~8.9.1",
+    "jQuery": "~2.2.0"
   }
 }
