--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,8 @@
     "github-js": "githubjs#~0.1.3",
     "highlight": "~8.9.1",
     "jQuery": "~2.2.0",
-    "font-awesome": "Font-Awesome#~4.5.0"
+    "font-awesome": "Font-Awesome#~4.5.0",
+    "lowdb": "~0.12.4",
+    "angular-ui-router": "^0.2.18"
   }
 }
