--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,8 @@
     "lowdb": "~0.12.4",
     "angular-ui-router": "^0.2.18",
     "angular-new-router": "^0.5.3",
-    "angularUtils-disqus": "angular-utils-disqus#^1.0.0"
+    "angularUtils-disqus": "angular-utils-disqus#^1.0.0",
+    "angular-loading-bar": "^0.8.0",
+    "angular-animate": "^1.5.0"
   }
 }
