--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jimmy Lv",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "markdown-toc": "^0.12.3"
+  }
 }
