--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "angularUtils-disqus": "angular-utils-disqus#^1.0.0",
     "angular-loading-bar": "^0.8.0",
     "angular-animate": "^1.5.0",
-    "angulartics-google-analytics": "^0.1.4"
+    "angulartics-google-analytics": "^0.1.4",
+    "angular-qr": "^0.2.0"
   }
 }
