--- a/package.json
+++ b/package.json
@@ -4,11 +4,26 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -w --bail --display-error-details",
+    "dev": "webpack-dev-server --history-api-fallback --hot --inline --progress"
   },
   "author": "Jimmy Lv",
   "license": "ISC",
   "dependencies": {
     "markdown-toc": "^0.12.3"
+  },
+  "devDependencies": {
+    "angular-ui-router": "^0.2.18",
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "ng-annotate-loader": "^0.1.0",
+    "ng-annotate-webpack-plugin": "^0.1.2",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7"
   }
 }
