--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Jimmy Lv",
   "license": "ISC",
   "dependencies": {
+    "angular-socialshare": "^0.1.20",
+    "js-yaml": "^3.5.4",
+    "lowdb": "^0.12.5",
     "markdown-toc": "^0.12.3"
   },
   "devDependencies": {
@@ -19,6 +22,9 @@
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "github-api": "^0.11.2",
+    "highlight.js": "^9.2.0",
+    "js-yaml": "^3.5.4",
     "ng-annotate-loader": "^0.1.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "node-sass": "^3.4.2",
