--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack -w --bail --display-error-details",
-    "dev": "webpack-dev-server --history-api-fallback --hot --inline --progress"
+    "start": "webpack-dev-server --history-api-fallback --hot --inline --progress"
   },
   "author": "Jimmy Lv",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "raw-loader": "^0.5.1",
     "github-api": "^0.11.2",
     "highlight.js": "^9.2.0",
     "js-yaml": "^3.5.4",
