--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
-    "css-loader": "^0.23.1",
-    "style-loader": "^0.13.0",
-    "file-loader": "^0.8.5",
     "ng-annotate-loader": "^0.1.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
+    "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.4.2",
-    "sass-loader": "^3.2.0",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
     "url-loader": "^0.5.7"
   }
 }
