--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "lowdb": "^0.12.5",
     "markdown-toc": "^0.12.3"
   },
+  "optionalDependencies": {
+    "fsevents": "^1.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "gulp": "^3.9.1",
     "html-loader": "^0.4.3",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
@@ -35,6 +39,8 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14",
+    "webpack-stream": "^3.1.0"
   }
 }
