--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 /.idea
 
-/app/bower_components
 /node_modules
 
 /_site
 /.jekyll-metadata
 /npm-debug.log
 
-/assets
-!/assets/bundle.js
+/dist
+!/dist/bundle.js
