--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
-  "name": "zuimeia",
+  "name": "nobackend.website",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "A powerful rich interactive web application by using nobackend tech stack.",
+  "main": "./app/app.js",
   "scripts": {
     "build": "webpack -w --bail --display-error-details",
     "start": "webpack-dev-server --history-api-fallback --hot --inline --progress"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JimmyLv/nobackend.website"
+  },
+  "homepage": "http://nobackend.website/",
   "author": "Jimmy Lv",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.2",
+    "angular-animate": "^1.5.2",
+    "angular-cache": "^4.5.0",
+    "angular-loading-bar": "^0.9.0",
+    "angular-marked": "^1.0.1",
+    "angular-new-router": "^0.5.3",
+    "angular-route": "^1.5.2",
+    "angular-sanitize": "^1.5.2",
+    "angular-scroll": "^1.0.0",
     "angular-socialshare": "^0.1.20",
     "angular-ui-router": "^0.2.18",
+    "angular-utils-disqus": "^1.0.1",
+    "angulartics": "^1.0.3",
+    "angulartics-google-analytics": "^0.1.4",
     "bootstrap": "^3.3.6",
     "github-api": "^0.11.2",
     "highlight.js": "^9.2.0",
     "js-yaml": "^3.5.4",
     "lowdb": "^0.12.5",
-    "markdown-toc": "^0.12.3"
+    "markdown-toc": "^0.12.3",
+    "marked": "^0.3.5"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
@@ -36,12 +53,11 @@
     "ng-annotate-loader": "^0.1.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ngtemplate-loader": "^1.3.1",
-    "node-sass": "^3.4.2",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1",
     "webpack-stream": "^3.1.0"
   }
 }
