--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "js-yaml": "^3.5.4",
     "lowdb": "^0.12.5",
     "markdown-toc": "^0.12.3",
-    "marked": "^0.3.5"
+    "marked": "^0.3.5",
+    "ng-fx": "^2.0.4"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
