--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angulartics": "^1.0.3",
     "angulartics-google-analytics": "^0.1.4",
     "bootstrap": "^3.3.6",
+    "font-awesome-animation": "0.0.8",
     "github-api": "^0.11.2",
     "highlight.js": "^9.2.0",
     "js-yaml": "^3.5.4",
