--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "github-api": "^0.11.2",
     "highlight.js": "^9.2.0",
     "js-yaml": "^3.5.4",
+    "lodash": "^4.6.1",
     "lowdb": "^0.12.5",
     "markdown-toc": "^0.12.3",
     "marked": "^0.3.5",
