--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack -w --bail --display-error-details",
     "start": "webpack-dev-server --history-api-fallback --hot --inline --progress",
-    "build": "webpack -p"
+    "build": "rm -rf ./dist && webpack -p --progress"
   },
   "repository": {
     "type": "git",
@@ -45,10 +45,12 @@
     "fsevents": "^1.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.5",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "html-loader": "^0.4.3",
@@ -57,11 +59,14 @@
     "ng-annotate-loader": "^0.1.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ngtemplate-loader": "^1.3.1",
+    "postcss-loader": "^0.8.2",
+    "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-stream": "^3.1.0"
+    "webpack-stream": "^3.1.0",
+    "yargs": "^4.3.2"
   }
 }
