--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,28 @@
-# 作者信息
-author: 
+author:
   name: 吕立青
-  email: lv460051518@gmail.com
-  link: http://www.jimmylv.info
+  email: jimmy.jinglv@gmail.com
+  link: http://blog.jimmylv.info
   weibo: http://weibo.com/liqing215
   github: http://github.com/JimmyLv
   zhihu: http://www.zhihu.com/people/lu-li-qing-90
 
-# 站点信息
-title: 吕立青的博客
-description: My personal note-blog.
-url: http://jimmylv.info
-rss_url: /pages/atom.xml
+project:
+  title: NoBackend Website
+  description: A powerful rich interactive web application by using nobackend tech stack.
+  url: http://nobackend.website
 
-# gavatar头像及Favicon
-gavatar: /public/img/gavatar.jpg
-favicon: /public/img/favicon.ico
-
-# google analytics 设置
-ga:
-  id: UA-55089304-1 
-  url: http://blog.jimmylv.info
-
-# disqus 设置
-disqus:
-  shortname: gotoshare
-
-# 主题设置，自动激活某个标签
-active: 编程
-
-# 首页除了最新文章外显示分类
-cates: 
-  - React
-  - 摄影
+# active items
+meta:
+  songlist: 309097660
+  posts:
+    user: JimmyLv
+    repo: jimmy.lv
+    folder: _posts
+    branch: gh-pages
+  active: 编程
+  tags:
+    - React
+    - 摄影
 
 # 中文本地化
 locals:
@@ -40,3 +30,14 @@ locals:
   about: 关于
   newest: 最新文章
   archive: 归档
+
+# google analytics
+ga:
+  id: UA-75024401-1
+  url: http://nobackend.website
+
+# disqus setting
+disqus:
+  shortname: nobackend-website
+  disqus_identifier: nobackend-website
+  disqus_url: http://nobackend.website
