--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ project:
   repository: https://github.com/JimmyLv/nobackend.website
   website: http://nobackend.website
 
-# _posts folder and github repo
+# github and api endpoint
 posts:
   github:
     user: JimmyLv
@@ -23,7 +23,7 @@ posts:
     endpoint: http://blog.jimmylv.info
     index: /api/index.json
 
-# active items
+# active items for show
 meta:
   songlist: 309097660
   active: 编程
@@ -31,7 +31,7 @@ meta:
     - React
     - 摄影
 
-# 中文本地化
+# chinese localization
 locals:
   tags: 标签
   about: 关于
@@ -45,6 +45,6 @@ ga:
 
 # disqus setting
 disqus:
-  shortname: nobackend-website
+  disqus_shortname: nobackend-website
   disqus_identifier: nobackend-website
   disqus_url: http://nobackend.website
