--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ author:
   name: 吕立青
   email: jimmy.jinglv@gmail.com
   link: http://blog.jimmylv.info
-  weibo: http://weibo.com/liqing215
   github: http://github.com/JimmyLv
-  zhihu: http://www.zhihu.com/people/lu-li-qing-90
+  weibo: http://weibo.com/liqing215
+  zhihu: http://www.zhihu.com/people/JimmyLv
 
 project:
   title: NoBackend Website
@@ -18,22 +18,30 @@ project:
   repository: https://github.com/JimmyLv/nobackend.website
   website: http://nobackend.website
 
-# github and api endpoint
-posts:
+# github endpoint
+github:
+  user: JimmyLv
+  repo: nobackend.website
+  branch: gh-pages
+  posts: _posts
+
+# api endpoint
+api:
   github:
-    user: JimmyLv
-    repo: nobackend.website
-    folder: _posts
-    branch: gh-pages
-  api:
-    endpoint: http://nobackend.website
-    index: http://nobackend.website/api/index.json
-    slides: http://nobackend.website/slides
-    rss: http://nobackend.website/pages/atom.xml
+    base: http://nobackend.website
+    index: /api/index.json
+    slides: /slides
+    rss: /pages/atom.xml
+  service:
+    music:
+      endpoint: http://app.atime.me/music-api-server
+      provider: netease # or xiami
+    zhihu: http://api.kanzhihu.com
 
 # active items for show
 meta:
   songlist: 309097660
+  zhihu: 616ce531de7f8a1cb33b6ec43ef763fc
   active: 前端
   tags:
     - React
