--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "lowdb": "^0.12.5",
     "markdown-toc": "^0.12.3",
     "marked": "^0.3.5",
-    "ng-fx": "^2.0.4"
+    "ng-fx": "^2.0.4",
+    "zhihu-api": "0.0.13"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
