--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "marked": "^0.3.5",
     "ng-fx": "^2.0.4",
     "to-markdown": "^2.0.1",
+    "xmldom": "^0.1.22",
+    "xpath": "0.0.22",
     "zhihu-api": "0.0.13"
   },
   "optionalDependencies": {
