--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./app/app.js",
   "scripts": {
     "dev": "webpack -w --bail --display-error-details",
-    "start": "webpack-dev-server --history-api-fallback --hot --inline --progress",
-    "build": "rm -rf ./dist; webpack -p --progress; cp -f index.html v1/index.html"
+    "start": "webpack-dev-server",
+    "build": "rm -rf ./_site && webpack -p --progress"
   },
   "repository": {
     "type": "git",
@@ -52,7 +52,12 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
+    "exports": "0.0.1",
+    "exports-loader": "^0.6.3",
+    "expose": "^0.1.4",
+    "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
@@ -64,6 +69,7 @@
     "ng-annotate-loader": "^0.1.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ngtemplate-loader": "^1.3.1",
+    "npm-install-webpack-plugin": "^3.0.0",
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
