--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ deploy:
   provider: s3
   access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['S3_SECRET_KEY'] %>
-  bucket: "nobackend-website"
+  bucket: "nobackend.website"
   skip_cleanup: true
   local_dir: v1
+  on:
+    branch: gh-pages
