--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 branches:
   only:
     - gh-pages
@@ -7,11 +8,14 @@ node_js:
 script:
   - npm install
   - npm run build
+cache:
+  directories:
+    - node_modules
 deploy:
   provider: s3
-  access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['S3_SECRET_KEY'] %>
-  bucket: "nobackend.website"
+  access_key_id: $S3_ACCESS_KEY_ID
+  secret_access_key: $S3_SECRET_KEY
+  bucket: nobackend.website
   skip_cleanup: true
   local_dir: v1
   on:
