--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ deploy:
   access_key_id: $S3_ACCESS_KEY_ID
   secret_access_key: $S3_SECRET_KEY
   bucket: nobackend.website
-  region: Singapore
+  region: ap-southeast-1
   skip_cleanup: true
   local_dir: v1
   on:
