--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack -w --bail --display-error-details",
     "start": "webpack-dev-server",
-    "build": "rm -rf v1 && webpack -p --progress"
+    "build": "rm -rf v1 && cross-env NODE_ENV=production webpack -p --progress"
   },
   "repository": {
     "type": "git",
@@ -54,6 +54,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "copy-webpack-plugin": "^1.1.1",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "exports": "0.0.1",
     "exports-loader": "^0.6.3",
