--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "A powerful rich interactive web application by using nobackend tech stack.",
   "main": "./app/app.js",
   "scripts": {
+    "dev:ng": "webpack --config webpack.angular.config.js -w --bail --display-error-details --hide-modules",
+    "serve:ng": "webpack-dev-server --config webpack.angular.config.js",
+    "build:ng": "cross-env NODE_ENV=production webpack --config webpack.angular.config.js -p --progress --hide-modules",
+
+    "dev:vue": "webpack --config webpack.vue.config.js -w --bail --display-error-details",
+    "serve:vue": "webpack-dev-server --config webpack.vue.config.js",
+    "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --hide-modules",
+
     "clean": "rm -rf v1 v2 v3",
-    "dev:ng": "webpack --config webpack.angular.config.js -w --bail --display-error-details",
-    "start:ng": "webpack-dev-server --config webpack.angular.config.js",
-    "build:ng": "npm run clean && cross-env NODE_ENV=production webpack --config webpack.angular.config.js -p --progress"
+    "build": "npm run clean && npm run build:ng && npm run build:vue"
   },
   "repository": {
     "type": "git",
@@ -44,7 +50,11 @@
     "ng-fx": "^2.0.4",
     "to-markdown": "^2.0.1",
     "xmldom": "^0.1.22",
-    "xpath": "0.0.22"
+    "xpath": "0.0.22",
+    "es6-promise": "^3.0.2",
+    "firebase": "^2.3.1",
+    "vue": "^1.0.8",
+    "vue-router": "^0.7.5"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
@@ -54,6 +64,13 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-runtime": "^5.8.0",
+    "stylus-loader": "^1.4.0",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^8.0.0",
+    "vue-style-loader": "^1.0.0",
     "copy-webpack-plugin": "^1.1.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
