--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ deploy:
   bucket: nobackend.website
   region: ap-southeast-1
   skip_cleanup: true
-  local_dir: v1
+  local_dir: _ng
   on:
     branch: gh-pages
