--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:vue": "webpack-dev-server --config webpack.vue.config.js",
     "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --hide-modules",
 
+    "cdn": "cd scripts && ./qrsync ng_conf.json && ./qrsync ng_conf.json",
     "clean": "rm -rf _ng _vue",
     "build": "npm run clean && npm run build:ng && npm run build:vue"
   },
