--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": "./app/app.js",
   "scripts": {
     "dev:ng": "webpack-dev-server --config webpack.angular.config.js",
-    "build:ng": "cross-env NODE_ENV=production webpack --config webpack.angular.config.js -p --progress --hide-modules",
-
+    "build:ng": "cross-env NODE_ENV=production webpack --config webpack.angular.config.js --progress --hide-modules",
     "dev:vue": "webpack-dev-server --config webpack.vue.config.js",
     "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --hide-modules",
-
-    "cdn": "cd scripts && ./qrsync ng_conf.json && ./qrsync ng_conf.json",
+    "cdn": "cd scripts && ./qrsync-v2 ng_conf.json && ./qrsync-v2 vue_conf.json",
     "clean": "rm -rf _ng _vue",
     "build": "npm run clean && npm run build:ng && npm run build:vue"
   },
@@ -62,14 +60,9 @@
     "autoprefixer": "^6.3.5",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
     "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^5.8.0",
-    "stylus-loader": "^1.4.0",
-    "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.0.0",
-    "vue-style-loader": "^1.0.0",
     "copy-webpack-plugin": "^1.1.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
@@ -80,6 +73,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
+    "happypack": "^2.0.6",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
     "json-loader": "^0.5.4",
@@ -93,7 +87,12 @@
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.0",
+    "stylus-loader": "^1.4.0",
     "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^8.0.0",
+    "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-stream": "^3.1.0",
