--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build:ng": "cross-env NODE_ENV=production webpack --config webpack.angular.config.js --progress --hide-modules",
     "dev:vue": "webpack-dev-server --config webpack.vue.config.js",
     "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --hide-modules",
-    "cdn": "cd scripts && ./qrsync-v2 ng_conf.json && ./qrsync-v2 vue_conf.json",
-    "clean": "rm -rf _ng _vue",
-    "build": "npm run clean && npm run build:ng && npm run build:vue"
+    "cdn": "cd scripts && ./qrsync-v2 conf.json",
+    "clean": "rm -rf public",
+    "build": "npm run build:ng && npm run build:vue",
+    "prod": "npm run clean && npm run build && npm run cdn && cp index.html public/index.html",
+    "serve": "jekyll clean && jekyll serve"
   },
   "repository": {
     "type": "git",
@@ -63,7 +65,7 @@
     "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^5.8.0",
-    "copy-webpack-plugin": "^1.1.1",
+    "copy-webpack-plugin": "^2.1.3",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "exports": "0.0.1",
