[#80] - Rename dist folder and change songlist id.

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ api:
 
 # active items for show
 meta:
-  songlist: 309097660
+  songlist: 330539469 # 309097660
   active: 前端
   tags:
     - React
@@ -72,7 +72,9 @@ gems:
   - jekyll-sitemap
   - jekyll-paginate
 
-source: public
+exclude:
+  - .idea/
+  - node_modules
 
 include:
   - _ng
