--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev:vue": "webpack-dev-server --config webpack.vue.config.js",
     "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --hide-modules",
     "cdn": "cd scripts && ./qrsync-v2 conf.json",
-    "clean": "rm -rf public",
+    "clean": "rm -rf app",
     "build": "npm run build:ng && npm run build:vue",
-    "prod": "npm run clean && npm run build && npm run cdn && cp index.html public/index.html",
+    "prod": "npm run clean && npm run build && npm run cdn && cp index.html app/index.html",
     "serve": "jekyll clean && jekyll serve"
   },
   "repository": {
