[#81] - Fixed copy folder commands.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
 script:
   - npm install
   - npm run build
-  - cp -r _ng app/_ng && cp -r _vue app/_vue && cp index.html app/index.html
+  - mkdir app && cp -rf _ng app/_ng && cp -rf _vue app/_vue && cp index.html app/index.html
 cache:
   directories:
     - node_modules
