--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:vue": "webpack-dev-server --config webpack.vue.config.js",
     "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --hide-modules",
     "cdn": "cd scripts && ./qrsync-v2 _ng.conf.json && ./qrsync-v2 _vue.conf.json",
-    "clean": "rm -rf _ng _vue",
+    "clean": "rm -rf _ng _vue _site",
     "build": "npm run clean && npm run build:ng && npm run build:vue",
     "prod": "npm run build && npm run cdn",
     "start": "jekyll clean && jekyll serve"
@@ -88,6 +88,7 @@
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
+    "scss-loader": "0.0.1",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.4.0",
     "url-loader": "^0.5.7",
