[#52] - Tried to fix Disqus not display bug when in AJAX application.

--- a/src/angular/index.template
+++ b/src/angular/index.template
@@ -23,14 +23,31 @@
     ga('create', 'UA-75024401-1', { 'cookieDomain': 'none' });
 </script>
 <script>
-    (function () { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-
-        s.src = '//nobackend-website.disqus.com/embed.js';
-
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'nobackend-website';
+    var disqus_identifier = 'nobackend-website';
+    var disqus_url = 'http://nobackend.website/_ng/#!/note';
+    var disqus_config = function () {
+        this.language = "en";
+    };
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
+    /* * * Disqus Reset Function * * */
+    var reset = function (newIdentifier, newUrl, newTitle, newLanguage) {
+        DISQUS.reset({
+            reload: true,
+            config: function () {
+                this.page.identifier = newIdentifier;
+                this.page.url = newUrl;
+                this.page.title = newTitle;
+                this.language = newLanguage;
+            }
+        });
+    };
 </script>
 </body>
 </html>
