[#0] - Just upgraded some big and dev outdated dependencies.

--- a/package.json
+++ b/package.json
@@ -31,29 +31,29 @@
     "angular-route": "^1.5.5",
     "angular-sanitize": "^1.5.5",
     "angular-scroll": "^1.0.0",
-    "angular-socialshare": "^0.1.20",
-    "angular-ui-router": "^0.2.18",
+    "angular-socialshare": "^2.1.5",
+    "angular-ui-router": "^0.3.0",
     "angular-utils-disqus": "^1.0.1",
     "angulartics": "^1.0.3",
     "angulartics-google-analytics": "^0.1.4",
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.2.1",
-    "firebase": "^2.4.2",
+    "firebase": "^3.0.2",
     "font-awesome": "^4.5.0",
     "font-awesome-animation": "0.0.8",
-    "github-api": "^0.11.2",
+    "github-api": "^2.0.0",
     "highlight.js": "^9.4.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.12.0",
     "lowdb": "^0.12.5",
-    "markdown-toc": "^0.12.5",
+    "markdown-toc": "^0.12.10",
     "marked": "^0.3.5",
     "ng-fx": "^2.0.4",
-    "to-markdown": "^2.0.1",
+    "to-markdown": "^3.0.0",
     "vue": "^1.0.24",
     "vue-router": "^0.7.5",
     "xmldom": "^0.1.22",
-    "xpath": "0.0.22"
+    "xpath": "0.0.23"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
@@ -90,7 +90,8 @@
     "raw-loader": "^0.5.1",
     "scss-loader": "0.0.1",
     "style-loader": "^0.13.0",
-    "stylus-loader": "^1.4.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^1.6.1",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
