--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ language: node_js
 node_js:
   - stable
 script:
-  - npm install && npm run build
-  - mkdir app && cp -rf _ng app/_ng && cp -rf _vue app/_vue && cp index.html app/index.html
+  - npm install
+  - npm run clean
+  - npm run build:ng
 cache:
   directories:
     - node_modules
@@ -18,6 +19,6 @@ deploy:
   bucket: nobackend.website
   region: ap-southeast-1
   skip_cleanup: true
-  local_dir: app
+  local_dir: _ng
   on:
     branch: gh-pages
