[#35] - Migrate firebase to 3.0 and rewrite github auth logic.

--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,10 @@
 {
-  "firebase": "nobackend-website",
-  "public": "_ng",
-  "ignore": [
-    "firebase.json",
-    "**/.*",
-    "**/node_modules/**"
-  ]
+  "hosting": {
+    "public": "_ng",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  }
 }
