--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "./app/app.js",
   "scripts": {
     "dev:ng": "webpack-dev-server --config webpack.angular.config.js",
-    "build:ng": "cross-env NODE_ENV=production webpack --config webpack.angular.config.js --progress --hide-modules",
+    "build:ng": "cross-env NODE_ENV=production webpack --config webpack.angular.config.js --progress --colors --hide-modules",
     "dev:vue": "webpack-dev-server --config webpack.vue.config.js",
-    "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --hide-modules",
-    "cdn": "cd scripts && ./qrsync-v2 _ng.conf.json && ./qrsync-v2 _vue.conf.json",
-    "clean": "rm -rf _ng _vue _site",
-    "build": "npm run clean && npm run build:ng && npm run build:vue",
+    "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --colors --hide-modules",
+    "dev:react": "webpack-dev-server --config webpack.react.config.js",
+    "build:react": "cross-env NODE_ENV=production webpack --config webpack.react.config.js --progress --colors --hide-modules",
+    "cdn": "cd scripts && ./qrsync-v2 _ng.conf.json && ./qrsync-v2 _vue.conf.json && ./qrsync-v2 _react.conf.json",
+    "clean": "rm -rf _ng _vue _react _site",
+    "build": "npm run clean && npm run build:ng && npm run build:vue && npm run build:react",
     "prod": "npm run build && npm run cdn",
     "start": "jekyll clean && jekyll serve"
   },
@@ -49,6 +51,8 @@
     "markdown-toc": "^0.12.10",
     "marked": "^0.3.5",
     "ng-fx": "^2.0.4",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "to-markdown": "^3.0.0",
     "vue": "^1.0.24",
     "vue-router": "^0.7.5",
@@ -60,10 +64,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.5",
+    "babel-cli": "^6.10.1",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babel-runtime": "^5.8.0",
     "copy-webpack-plugin": "^2.1.3",
     "cross-env": "^1.0.7",
@@ -88,6 +94,7 @@
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
+    "react-hot-loader": "^1.3.0",
     "scss-loader": "0.0.1",
     "style-loader": "^0.13.0",
     "stylus": "^0.54.5",
