--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ng-fx": "^2.0.4",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-router": "^2.4.1",
     "to-markdown": "^3.0.0",
     "vue": "^1.0.24",
     "vue-router": "^0.7.5",
@@ -95,6 +96,7 @@
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
+    "routes": "^2.1.0",
     "scss-loader": "0.0.1",
     "style-loader": "^0.13.0",
     "stylus": "^0.54.5",
