--- a/package.json
+++ b/package.json
@@ -56,7 +56,11 @@
     "react-dom": "^15.1.0",
     "react-media-player": "^0.4.0",
     "react-player": "^0.7.2",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "to-markdown": "^3.0.0",
     "vue": "^1.0.24",
     "vue-router": "^0.7.5",
