--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^5.8.0",
     "copy-webpack-plugin": "^2.1.3",
     "cross-env": "^1.0.7",
@@ -103,6 +104,9 @@
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
     "routes": "^2.1.0",
     "scss-loader": "0.0.1",
     "style-loader": "^0.13.0",
