--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
+    "redux-logger": "^2.6.1",
     "routes": "^2.1.0",
     "scss-loader": "0.0.1",
     "style-loader": "^0.13.0",
