--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ script:
   - npm install -g firebase-tools
   - npm install
   - npm run clean
-  - npm run build:ng
+  - npm run lint:react
+  - npm run build:react
 cache:
   directories:
     - node_modules
@@ -20,7 +21,7 @@ deploy:
   bucket: nobackend.website
   region: ap-southeast-1
   skip_cleanup: true
-  local_dir: _ng
+  local_dir: _react
   on:
     branch: gh-pages
 after_success:
