--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --colors --hide-modules",
     "dev:react": "webpack-dev-server --config webpack.react.config.js",
     "build:react": "cross-env NODE_ENV=production webpack --config webpack.react.config.js --progress --colors --hide-modules",
+    "lint:react": "eslint -c .eslintrc.json --ext .jsx --ext .js src/react/*",
+    "prod:react": "npm run build:react && cd scripts && ./qrsync-v2 _react.conf.json",
     "cdn": "cd scripts && ./qrsync-v2 _ng.conf.json && ./qrsync-v2 _vue.conf.json && ./qrsync-v2 _react.conf.json",
     "clean": "rm -rf _ng _vue _react _site",
     "build": "npm run clean && npm run build:ng && npm run build:vue && npm run build:react",
     "prod": "npm run build && npm run cdn",
-    "prod:react": "npm run build:react && cd scripts && ./qrsync-v2 _react.conf.json",
     "start": "jekyll clean && jekyll serve"
   },
   "repository": {
@@ -80,10 +81,16 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-runtime": "^5.8.0",
+    "babel-runtime": "^6.9.2",
     "copy-webpack-plugin": "^2.1.3",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-import-resolver-webpack": "^0.3.0",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-react": "^5.1.1",
     "exports": "0.0.1",
     "exports-loader": "^0.6.3",
     "expose": "^0.1.4",
