[#69] - Just added experimentalObjectRestSpread as parserOptions due to ESLint Parsing error.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,13 @@
       }
     }
   },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "ecmaFeatures": {
+      "jsx": true,
+      "experimentalObjectRestSpread": true
+    }
+  },
   "rules": {
     "global-require": 0,
     "comma-dangle": 0,
