[#69] - Added BlogContent component and fetch article from GitHub api.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "semi": [2, "never"],
     "max-len": 0,
     "eol-last": 0,
+    "no-underscore-dangle": 0,
     "react/jsx-space-before-closing": 0,
     "react/jsx-no-bind": 0
   }
