--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "npm-install-webpack-plugin": "^3.0.0",
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
+    "qrcode.react": "^0.6.1",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
