--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:react": "webpack-dev-server --config webpack.react.config.js",
     "build:react": "cross-env NODE_ENV=production webpack --config webpack.react.config.js --progress --colors --hide-modules",
     "lint:react": "eslint -c .eslintrc.json --ext .jsx --ext .js src/react/*",
+    "test:react": "karma start --single-run=false",
     "prod:react": "npm run build:react && cd scripts && ./qrsync-v2 _react.conf.json",
     "cdn": "cd scripts && ./qrsync-v2 _ng.conf.json && ./qrsync-v2 _vue.conf.json && ./qrsync-v2 _react.conf.json",
     "clean": "rm -rf _ng _vue _react _site",
@@ -79,13 +80,18 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.9.2",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.0",
     "copy-webpack-plugin": "^2.1.3",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.3.0",
@@ -102,9 +108,20 @@
     "happypack": "^2.0.6",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
+    "ignore-loader": "^0.1.1",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
+    "mocha": "^2.5.3",
     "ng-annotate-loader": "^0.1.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ngtemplate-loader": "^1.3.1",
@@ -113,6 +130,7 @@
     "precss": "^1.4.0",
     "qrcode.react": "^0.6.1",
     "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
