--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ branches:
 language: node_js
 node_js:
   - stable
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 script:
   - npm install -g firebase-tools
   - npm install
