--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^15.1.0",
     "react-player": "^0.7.2",
     "react-redux": "^4.4.5",
+    "react-redux-loading-bar": "^2.0.2",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
