[#89] - Fixed codecov configuration and added script to run it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ script:
   - npm run lint:react
   - npm run test:react
   - npm run build:react
+after_script:
+  - npm run codecov
 cache:
   directories:
     - node_modules
