--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cdn": "cd scripts && ./qrsync-v2 _ng.conf.json && ./qrsync-v2 _vue.conf.json && ./qrsync-v2 _react.conf.json",
     "clean": "rm -rf _ng _vue _react _site",
     "build": "npm run clean && npm run build:ng && npm run build:vue && npm run build:react",
+    "codecov": "cat coverage/*/lcov.info | codecov",
     "prod": "npm run build && npm run cdn",
     "start": "jekyll clean && jekyll serve"
   },
@@ -89,6 +90,7 @@
     "babel-runtime": "^6.9.2",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.5.0",
+    "codecov": "^1.0.1",
     "copy-webpack-plugin": "^2.1.3",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
