[#0] - bug fixed due to incorrect branch of api address

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ project:
 github:
   user: JimmyLv
   repo: jimmylv.github.io
-  branch: gh-pages
+  branch: master
   posts: _posts
   subfolder: true
 
