--- a/src/react/index.template
+++ b/src/react/index.template
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客 - nobackend-website created by 吕立青</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        window.location = "http://haiku.jimmylv.info/"
+    </script>
 </head>
 <body>
 <div id="app"></div>
