Just changed posts path

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github:
   user: JimmyLv
   repo: jimmylv.github.io
   branch: master
-  posts: _posts
+  posts: ''
   subfolder: true
 
 # api endpoint
