--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:ng": "webpack-dev-server --config webpack.angular.config.js",
     "build:ng": "cross-env NODE_ENV=production webpack --config webpack.angular.config.js --progress --colors --hide-modules",
-    "prod:ng": "npm run build:ng && cd scripts && ./qrsync-v2 _ng.conf.json",
+    "prod:ng": "npm run build:ng && qshell qupload ./scripts/_ng.conf.json",
     "dev:vue": "webpack-dev-server --config webpack.vue.config.js",
     "build:vue": "cross-env NODE_ENV=production webpack --config webpack.vue.config.js --progress --colors --hide-modules",
     "dev:react": "webpack-dev-server --config webpack.react.config.js",
@@ -14,8 +14,8 @@
     "lint:react": "eslint src/react/. --ext .jsx --ext .js; exit 0",
     "fix:react": "eslint --fix src/react/. --ext .jsx --ext .js; exit 0",
     "test:react": "karma start --single-run=true",
-    "prod:react": "npm run fix:react && npm run test:react && npm run build:react && cd scripts && ./qrsync-v2 _react.conf.json",
-    "cdn": "cd scripts && ./qrsync-v2 _ng.conf.json && ./qrsync-v2 _vue.conf.json && ./qrsync-v2 _react.conf.json",
+    "prod:react": "npm run fix:react && npm run test:react && npm run build:react && cd scripts && ./qshell qupload _react.conf.json",
+    "cdn": "qshell qupload ./scripts/_ng.conf.json && qshell qupload ./scripts/_vue.conf.json && qshell qupload ./scripts/_react.conf.json",
     "clean": "rm -rf _ng _vue _react _site",
     "build": "npm run clean && npm run build:ng && npm run build:vue && npm run build:react",
     "codecov": "cat coverage/*/lcov.info | codecov",
